fix: editor links not visible in kvlist due to grid column overflow
The upstream grid uses 'grid-template-columns: minmax(160px, 15%) 1fr'
which allows the second column to grow beyond the container width when
content is wide (e.g. request_server). This pushes the float:right
filename/editor-link spans off-screen.

Fix by overriding to 'auto minmax(0, 1fr)' which constrains the second
column to the available space, keeping editor links visible.

--- a/resources/laravel-debugbar.css
+++ b/resources/laravel-debugbar.css
@@ -134,6 +134,10 @@ table.phpdebugbar-widgets-tablevar td {
     border-top: 0px;
 }
 
+dl.phpdebugbar-widgets-kvlist {
+    grid-template-columns: minmax(160px, 15%) minmax(0, 1fr);
+}
+
 div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter,
 div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded {
     background-color: #6d6d6d;
